@@ -1,7 +1,7 @@
 #
 #  backup.conf
 #
-#  backup v0.5 - configuration file
+#  backup v0.6 - configuration file
 #
 #  This file contains some configuration values for use with backup v0.5.
 #  backup will first look for this file in the current working directory,
@@ -26,7 +26,7 @@
 #    POST_EACH    = Script to run after each path backup's completed.
 
 
-SOURCE_LIST=/etc/backup.list
+SOURCE_LIST=./backup.list
 DEST_DIR=/backup/backup-`date +"%Y-%m-%d"`
 NICENESS=19
 MODE=600
